--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #212529;
+  background-color: #efefef;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -38,9 +38,22 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   min-width: 320px;
+}
+
+:focus-visible {
+  outline: 2px solid rgba(56, 56, 56, 0.4);
+  outline-offset: 2px;
 }
 
 main#view {
